1. 调整发射参数 2. 修复发射异常跳动的现象 3. 新增调试Lottie加载本地动画 4. 其他

--- a/BundleTest/Base.lproj/Main.storyboard
+++ b/BundleTest/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="6in-Ku-gsJ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="9eJ-KO-ewJ">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -65,14 +65,14 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="fRK-c2-4KN" secondAttribute="trailing" constant="16" id="3Wv-aj-4KQ"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="1pw-zL-acS" secondAttribute="trailing" constant="8" id="7m0-fo-pkX"/>
-                            <constraint firstItem="fRK-c2-4KN" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="18" id="SPI-xa-yYX"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="fRK-c2-4KN" secondAttribute="bottom" constant="227" id="UeO-HM-eYy"/>
-                            <constraint firstItem="1pw-zL-acS" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="8" id="eqB-Ih-iDt"/>
-                            <constraint firstItem="1pw-zL-acS" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="tSq-Pv-eF0"/>
+                            <constraint firstItem="eAJ-f9-mGg" firstAttribute="trailing" secondItem="fRK-c2-4KN" secondAttribute="trailing" constant="16" id="3Wv-aj-4KQ"/>
+                            <constraint firstItem="eAJ-f9-mGg" firstAttribute="trailing" secondItem="1pw-zL-acS" secondAttribute="trailing" constant="8" id="7m0-fo-pkX"/>
+                            <constraint firstItem="fRK-c2-4KN" firstAttribute="leading" secondItem="eAJ-f9-mGg" secondAttribute="leading" constant="18" id="SPI-xa-yYX"/>
+                            <constraint firstItem="eAJ-f9-mGg" firstAttribute="bottom" secondItem="fRK-c2-4KN" secondAttribute="bottom" constant="227" id="UeO-HM-eYy"/>
+                            <constraint firstItem="1pw-zL-acS" firstAttribute="leading" secondItem="eAJ-f9-mGg" secondAttribute="leading" constant="8" id="eqB-Ih-iDt"/>
+                            <constraint firstItem="1pw-zL-acS" firstAttribute="bottom" secondItem="eAJ-f9-mGg" secondAttribute="bottom" id="tSq-Pv-eF0"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <viewLayoutGuide key="safeArea" id="eAJ-f9-mGg"/>
                     </view>
                     <connections>
                         <outlet property="waveLineLeadingConstraint" destination="eqB-Ih-iDt" id="R49-Aw-XuV"/>
@@ -91,13 +91,68 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="gr5-IB-39p"/>
+                        <viewLayoutGuide key="safeArea" id="k67-Fl-ZRU"/>
                     </view>
                     <navigationItem key="navigationItem" id="log-5m-iEk"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TwT-23-1kH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2068" y="133.5832083958021"/>
+        </scene>
+        <!--View Controller3-->
+        <scene sceneID="enr-8I-zaX">
+            <objects>
+                <viewController id="t0b-4q-tP1" customClass="ViewController3" customModule="BundleTest" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="oxx-qq-Xkn">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0VD-dV-mEn" customClass="MXScrollView">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="RJd-2k-5ho" firstAttribute="trailing" secondItem="0VD-dV-mEn" secondAttribute="trailing" id="N2d-4v-MMb"/>
+                            <constraint firstItem="0VD-dV-mEn" firstAttribute="top" secondItem="RJd-2k-5ho" secondAttribute="top" id="X6l-Vd-GDG"/>
+                            <constraint firstItem="RJd-2k-5ho" firstAttribute="bottom" secondItem="0VD-dV-mEn" secondAttribute="bottom" id="jPS-6L-p81"/>
+                            <constraint firstItem="0VD-dV-mEn" firstAttribute="leading" secondItem="RJd-2k-5ho" secondAttribute="leading" id="pZq-vn-Yjc"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="RJd-2k-5ho"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="Bcw-kU-98A"/>
+                    <connections>
+                        <outlet property="scrollView" destination="0VD-dV-mEn" id="28w-BY-nI1"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="oj6-tX-azk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3752.8000000000002" y="133.5832083958021"/>
+        </scene>
+        <!--View Controller4-->
+        <scene sceneID="XTF-Oc-2c6">
+            <objects>
+                <viewController id="9eJ-KO-ewJ" customClass="ViewController4" customModule="BundleTest" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ShU-30-Bxz">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Sk9-Dp-tsv">
+                                <rect key="frame" x="172" y="494" width="30" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Pop"/>
+                                <connections>
+                                    <action selector="onPopTapped:" destination="9eJ-KO-ewJ" eventType="touchUpInside" id="r1M-u1-VnC"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="c7y-nv-XaT"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2Hz-4g-68Y" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4638" y="134"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="X67-xV-uIY">
@@ -116,6 +171,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZOC-6G-huV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1128.8" y="133.5832083958021"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="lYN-kB-PL4">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="n7Q-5N-ENF" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="JVX-e3-S7T">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="t0b-4q-tP1" kind="relationship" relationship="rootViewController" id="JHJ-KS-VKE"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FPJ-gb-CWB" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2813.5999999999999" y="133.5832083958021"/>
         </scene>
     </scenes>
     <resources>
